--- a/css/templates/land-see/page.css
+++ b/css/templates/land-see/page.css
@@ -549,7 +549,6 @@ h4,
 
 .land-see-popular-content,
 .land-see-recent-content,
-.land-see-categories-carousel,
 .land-see-paging {
   max-width: 850px;
 }
@@ -633,6 +632,7 @@ h4,
 
 .land-see-hero-button {
   font: 400 var(--h9)/var(--line-height-1) var(--font-navigation);
+  text-transform: uppercase;
   padding: 9px 14px;
   border: solid 1px var(--color-primary);
   opacity: .7;
@@ -734,9 +734,11 @@ h4,
   color: var(--color-font-primary);
 }
 
-.land-see-categories-carousel-page-load,
-.land-see-categories-carousel {
-  border-bottom: solid 1px #f0f0f0;
+.land-see-categories-nav-page-load,
+.land-see-categories-nav {
+  overflow: hidden;
+  height: 35px;
+  border-bottom: solid 1px var(--color-story-navigation-border);
 }
 
 .land-see-categories-button {
@@ -744,22 +746,25 @@ h4,
   text-transform: uppercase;
   letter-spacing: .1rem;
   border: none;
+  outline: none;
   background-color: transparent;
   padding: 0 0 3px 0;
   cursor: pointer;
 }
 
-.land-see-categories-button:focus {
+.land-see-categories-button:focus,
+.land-see-next-page:focus,
+.land-see-prev-page:focus  {
   outline: 0;
 }
 
 .land-see-selected-category,
-.land-see-categories-carousel-page-load button:target {
-  border-bottom: solid 1px #98caaf;
+.land-see-categories-nav-page-load button:target {
+  border-bottom: solid 1px var(--color-story-navigation-accent);
 }
 
 .land-see-paging {
-  border-top: solid 1px #f0f0f0;
+  border-top: solid 1px var(--color-story-navigation-border);
 }
 
 .land-see-next-page,
@@ -794,19 +799,14 @@ h4,
   top: 14px;
 }
 
-.land-see-category .amp-carousel-button {
-  display: none;
-}
-
-.land-see-category .amp-scrollable-carousel-slide {
-  margin-left: 0;
-}
-
-.land-see-category .i-amphtml-scrollable-carousel-container {
+.land-see-categories-inner-nav  {
+  width: 100%;
+  overflow-x: scroll;
   padding-bottom: 50px;
 }
 
-.land-see-category .i-amphtml-scrollable-carousel-container:after {
+.land-see-categories-nav-page-load:after,
+.land-see-categories-nav:after {
   content: '';
   pointer-events: none;
   background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
@@ -814,20 +814,47 @@ h4,
   top: 0;
   right: 0;
   width: 150px;
-  height: 100%;
+  height: 35px;
   z-index: 10;
 }
 
+.land-see-list-overflow[overflow] {
+  background-color: var(--color-story-navigation-accent);
+  color: var(--color-font-secondary);
+  cursor: pointer;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: var(--z2);
+}
+
+.land-see-overflow-button {
+  opacity: 1;
+}
+
+@media (max-width: 30rem) {
+  .land-see-hide-mobile {
+    display: none;
+  }
+}
+
 @media (--breakpoint-xs) {
-  .land-see-category .i-amphtml-scrollable-carousel-container div:last-child {
+  .land-see-categories-inner-nav div:last-child {
     margin-right: 75px;
   }
 }
 
 @media (--breakpoint-sm) {
-  .land-see-category .i-amphtml-scrollable-carousel-container:after {
+  .land-see-categories-nav-page-load:after,
+  .land-see-categories-nav:after {
+    display: none;
+    content: none;
     background: none;
     width: 0;
     height: 0;
+  }
+  .land-see-categories-inner-nav div:last-child {
+    margin-right: 0;
   }
 }
